--- a/style-01.css
+++ b/style-01.css
@@ -153,11 +153,13 @@
     width: 250px;
 }
 
+@media screen and (min-width: 1080) {
+* {
+    margin: 0;
+}   
 
-@media (max-width: 1080px) {
 
 body {
     background-color: white;
 }
-
 }
