--- a/style-01.css
+++ b/style-01.css
@@ -93,7 +93,7 @@
     font-weight: normal;
     line-height: 1.5;
     font-size: 18px;
-    top: 1000px;
+    top: 650px;
     left: 180px;
 }
 
@@ -141,7 +141,7 @@
     position: absolute;
     display: flex;
     flex-wrap: wrap;
-    top: 320px;
+    top: 380px;
     
 }
 
@@ -150,7 +150,7 @@
     width: 250px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
 * {
     margin: 0;
     padding: 0;
@@ -224,7 +224,7 @@ display: none;
     font-weight: normal;
     line-height: 1.5;
     font-size: 12px;
-    top: 400px;
+    top: 450px;
     left: 10px;
 }
 
@@ -262,6 +262,22 @@ display: none;
     border: 10px;
     border-radius: 25px;
     font-size: 110%;
+}
+
+/* Illustrations Grid */
+
+.row {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    top: 300px;
+}
+
+.column-1 img {
+    position: relative;
+    padding: 5px;
+    width: 100px;
+    left: 5%;
 }
 
 }
