--- a/style-01.css
+++ b/style-01.css
@@ -275,7 +275,7 @@ display: none;
 
 .column-1 img {
     position: relative;
-    padding: 5px;
+    padding: 5px 5px 5px 5px;
     width: 100px;
     left: 5%;
 }
