--- a/style-01.css
+++ b/style-01.css
@@ -275,7 +275,7 @@ display: none;
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
-    top: 300px;
+    top: 300px; right: 10px;
 }
 
 .column-1 img {
