--- a/style-01.css
+++ b/style-01.css
@@ -86,7 +86,7 @@
     margin: 5px 150px 5px 5px;
     padding: 20px 20px 20px 30px;
     color: #000;
-    background-color: white;
+    background-color: rgba(245, 245, 245, 0.398);
     border: 25px 25px 25px 25px;
     border-radius: 25px;
     font-family: 'Montserrat', sans-serif;
@@ -132,6 +132,9 @@
     border: 20px;
     border-radius: 50px;
     font-size: 150%;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.065) 3px 3px;
+    
 }
 
 /* Illustrations Grid */
